package SmartHome.ddd;

public interface DomainEntity {

    DomainID getId();
}
