package SmartHome.ddd;

public interface DomainID {

    String getID();
}
