@startuml
title <size: 30> US24 Class Diagram

interface Sensor {

}

interface DomainEntity{
    + getID() : DomainID
}

interface DomainID{
    + getID() : String
}

interface ValueObject<T> {
    + getValue() : T
}

class PowerConsumptionSensor{
    - sensorName : SensorNameVO
    - sensorID : SensorIDVO
    - sensorTypeID : SensorTypeIDVO
    - deviceID : DeviceIDVO

    + PowerConsumptionSensor(sensorName : SensorNameVO,deviceID : DeviceIDVO,sensorTypeID : SensorTypeIDVO)
    + getID() : SensorIDVO
    + getSensorName() : SensorNameVO
    + getSensorTypeID() : SensorTypeIDVO
    + getDeviceID() : DeviceIDVO
    + getPowerConsumption(simHardware : SimHardware) : ValueObject<Integer>
}

class PowerConsumptionValue{
    - powerConsumptionValue : int

    + PowerConsumptionValue(powerConsumptionValue : int)
    + getValue() : Integer
}

class SimHardware{
    + getValue(): String
}

class SensorNameVO{
    - sensorName : String
    + SensorNameVO(sensorName : String)
    + getValue() : String
}

class SensorIDVO{
    - identifier : UUID
    + SensorIDVO(identifier : UUID)
    + getID() : String
}


class SensorTypeIDVO{
    - sensorTypeID : String
    + SensorTypeIDVO(sensorTypeID : String)
    + getID() : String
}

class DeviceIDVO{
    - deviceID : UUID
    + DeviceIDVO(deviceID : UUID)
    + getID() : String
}


DomainEntity <|.. PowerConsumptionSensor
Sensor <|.. PowerConsumptionSensor
SimHardware <.. PowerConsumptionSensor

SensorNameVO <.. PowerConsumptionSensor
SensorIDVO *-- PowerConsumptionSensor
PowerConsumptionValue *--right PowerConsumptionSensor
SensorTypeIDVO <.. PowerConsumptionSensor
DeviceIDVO <.. PowerConsumptionSensor

ValueObject <|.. SensorNameVO
DomainID  <|.. SensorIDVO
DomainID  <|.. SensorTypeIDVO
DomainID  <|.. DeviceIDVO

ValueObject <|.. PowerConsumptionValue

@enduml